@@ -1,26 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_css">
 
- <stylesheet id="member.css" authenticated="True" />
- <stylesheet id="base.css" />
- <stylesheet id="public.css" />
- <stylesheet id="columns.css" />
- <stylesheet id="authoring.css" />
- <stylesheet id="portlets.css" />
- <stylesheet id="controlpanel.css" />
- <stylesheet id="deprecated.css" />
- <stylesheet id="navtree.css" />
- <stylesheet id="invisibles.css" />
- <stylesheet id="forms.css" />
- <stylesheet id="ploneKss.css" />
-
- <stylesheet id="print.css" media="print" />
- <stylesheet id="mobile.css" media="handheld" enabled="0" />
-
- <stylesheet id="ploneCustom.css" media="all" />
-
- <stylesheet id="RTL.css"
-    expression="python:portal.restrictedTraverse('@@plone_portal_state').is_rtl()" />
  <stylesheet id="IEFixes.css" conditionalcomment="lt IE 8" />
 
 </object>
