@@ -3,11 +3,17 @@ Changelog
 
 1.0b1 - Unreleased
 ------------------
+
+- Remove common CSS registries. Adjust skin layers order.
+  Refs http://dev.plone.org/plone/ticket/9988.
+  [dukebody]
+
 - Highlighted current item in actions menu with the font color and boldness.
   [spliter]
 
 1.0a4 - 2010-02-01
 ------------------
+
 - Fix packaging issues.
   [esteele]
 
